# Projectwise

./: .gitignore  .registry.json  BUG_FIX_REPORT.md  COMPLETION_REPORT.md  Cargo.toml  FILES_LOCATION.txt  MASTER_INDEX.md  MIGRATION_COMPLETE.md  PACKAGE_COMPLETION_SUMMARY.md  PACKAGE_DEPLOYMENT_GUIDE.md  PACKAGE_MANIFEST.txt  PACKAGE_README.md  README.md  REFACTORING_SUMMARY.md
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-registry-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md
.planning/phases/02-fzf-selector/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-browsing-symlinks/: 03-01-PLAN.md  (+3 more)
docs/: ARCHITECTURE.md  CORRECTION_REPORT.md  GUARDRAILS_IMPLEMENTATION.md  MIGRATION_QUICK_REFERENCE.md  PROJECT_WORKFLOW_GUIDE.md  QUICK_REFERENCE.txt  TROUBLESHOOTING.md  VERIFICATION.md  demo.tape  v3.3-demo.tape  workflow.tape
package/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  INDEX.md  LICENSE  README.md  flake.nix  package.json
package/docs/: CONTRIBUTING.md  INSTALLATION.md  USAGE.md
package/lib/: cleanup.sh  core.sh  create.sh  delete.sh  edit.sh  info.sh  list.sh  preview.sh  registry.sh  selector.sh
package/scripts/: install.sh  migrate-from-zshrc.sh  uninstall.sh
package/templates/: bashrc-snippet.sh  project-template.json  registry-template.json  zshrc-snippet.sh
package/tests/: integration.bats  project-select.bats  registry-init.bats  test_helper.bash
src/: filetree.rs  main.rs  main.rs.bak  models.rs  registry.rs  sessions.rs  theme.rs
(+12 files in other folders)
