[package]
name = "cpm"
version = "3.1.0"
edition = "2021"
description = "Claude Project Manager — Rust TUI for managing Claude Code projects"
license = "MIT"
repository = "https://github.com/anoop-titus/Projectwise"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
dirs = "5"
anyhow = "1"
walkdir = "2"
fs2 = "0.4"
opaline = { version = "0.4.0", features = ["builtin-themes", "ratatui"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
opt-level = "z"
